--- a/include/introduction.html
+++ b/include/introduction.html
@@ -7,7 +7,7 @@
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>By reading this paper and by looking through the data used in the analysis, we could not help but draw a parallel with a part of the population that suffers as much injustice as minorities. These are women.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Although their place in society is central, in 2018 in the United States, women earned on average $10194 less than men for the same job. This gap is even greater for Black and Hispanic women, who earn $2,3540 and $2,8036 less than men respectively. (source: https://www.census.gov/programs-surveys/acs/)</p>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'><img src="../factory/Gender-Wage-Gap-_webfig_02.png">
+<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'><img src="./factory/Gender-Wage-Gap-_webfig_02.png">
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Given the similarities between minorities and women in terms of social justice, we felt it would be worthwhile to see whether this injustice also occurs in police arrests.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
