--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ a {
   transition: all 0.2s linear;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h3, h4, h5 {
   /* font-family: 'Poppins', sans-serif; */
   font-family: unset;
   font-size: 40px;
