--- a/include/introduction.html
+++ b/include/introduction.html
@@ -6,7 +6,7 @@
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>By reading this paper and by looking through the data used in the analysis, we could not help but draw a parallel with a part of the population that suffers as much injustice as minorities. These are women.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Although their place in society is central, in 2018 in the United States, women earned on average $10194 less than men for the same job. This gap is even greater for Black and Hispanic women, who earn $2,3540 and $2,8036 less than men respectively. (source: https://www.census.gov/programs-surveys/acs/)</p>
+<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Although their place in society is central, in 2018 in the United States, <b>women earned on average $10194 less than men for the same job</b>. This gap is even greater for Black and Hispanic women, who earn $23,540 and $28,036 less than men respectively. (source: https://www.census.gov/programs-surveys/acs/)</p>
 <br>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'><img src="./factory/Gender-Wage-Gap-_webfig_02.png">
 <br>
@@ -15,9 +15,15 @@
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Given the similarities between minorities and women in terms of social justice, we felt it would be worthwhile to see whether this injustice also occurs in police arrests.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>For this purpose, we divided our analysis into three parts:</p>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>- RQ1: // TODO: Add a short description</p>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>- RQ2: //Same</p>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>- RQ3: // Same</p>
+
+<ul>
+    <li><b>Outcome analysis</b>: In this section, we try to answer the question of knowing whether women are more stopped by police than men on the basis of less evidence. To get meaningful results, we use the outcome analysis which uses the ratio of successful rates across gender and shows if there is a potential bias.</li>
+    <li><b>Method 2</b>: To be completed</li>
+    <li><b>Method 3</b>: To be completed</li>
+
+</ul>
+
+
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Throughout our analysis, we will illustrate facts through graphs and figures focused on specific states.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
