--- a/include/rq1.html
+++ b/include/rq1.html
@@ -1,7 +1,6 @@
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>In order to determine if the police are sexist against women, we should answer the question of knowing <strong>whether women are checked more than men based on less evidence</strong>?</p>
 <br>
-<h2>Description of the dataset:</h2>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
+<b>Description of the dataset:</b>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>To answer the above question, we use a dataset from the <strong>Stanford Open Policing Project</strong>.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>The data collected for this project came from nearly 50 state patrol agencies and over 100 municipal police department. The initial version on this dataset contains data of over 95 million stops.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
@@ -18,7 +17,7 @@
 
 <div id="rq1_1"></div>
 <br>
-<h2>Data analysis:</h2>
+<b>Data analysis:</b>
 
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>As you can see on the figure above, we have a total of 3,124,582 stops or 2,176,663 stops made on men and 947,919 on women.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
@@ -33,7 +32,7 @@
 <p>The arrests are distributed according to the following plot:</p>
 <div id="rq1_3.html"></div>
 <br>
-<h2>Results:</h2>
+<b>Results:</b>
 
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>As you can see, the arrests of men are clearly higher than those of women.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>However, as we will see, Arizona state police tend to arrest women on the basis of less evidence.</p>
