--- a/include/rq2.html
+++ b/include/rq2.html
@@ -25,3 +25,11 @@
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>In Washington and Connecticut, we see a slight trend in contraband rates for female drivers after dusk compared to what we observe in search rates. This change might represent discrimination against men, considering even though women were stopped and searched less than men, their contraband rate is quite close to men.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <div id="dusk_delta_searches_success"></div>
+
+ <script> 
+
+      $(function(){
+        $("#dusk_delta_searches").load("./include/dusk_delta_searches.html");
+        $("#dusk_delta_searches_success").load("./include/dusk_delta_searches_success.html");
+      });
+      </script> 
