--- a/include/rq1.html
+++ b/include/rq1.html
@@ -18,18 +18,18 @@
 <br>
 <b>Data analysis:</b>
 
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>As you can see on the figure above, we have a total of 3,124,582 stops or 2,176,663 stops made on men and 947,919 on women.</p>
+<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>As you can see on the figure below, we have a total of 3,124,582 stops or 2,176,663 stops made on men and 947,919 on women.</p>
+<div id="rq1_1"></div>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>This distribution is not very significant given several factors that should be taken into account. Since we don&apos;t have enough information on the demography of the region, we pushed our analysis more in depth in another direction.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>In order to verify whether women are more unfairly controlled than men, we used the outcome test as presented in the paper by Pierson et al.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>We analyzed successful search rates across gender to highlight a potential disparity between men and women.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>In order to reach this goal, we recorded all the arrests made in each county of the State of Arizona. We obtained the following distribution:</p>
-<div id="rq1_2"></div>
+<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>In order to reach this goal, we recorded all the arrests made in each county of the State of Arizona.
 
 <p>The arrests are distributed according to the following plot:</p>
-<div id="rq1_3"></div>
+<div id="rq1_2"></div>
 <br>
 <b>Results:</b>
 
@@ -46,9 +46,9 @@
  <script> 
 
       $(function(){
-        //$("#rq1_1").load("./include/rq1_1.html");
+        $("#rq1_1").load("./include/rq1_1.html");
         $("#rq1_2").load("./include/rq1_2.html");
-        $("#rq1_3").load("./include/rq1_3.html");
+        //$("#rq1_3").load("./include/rq1_3.html");
       });
       </script> 
 
