--- a/include/rq3.html
+++ b/include/rq3.html
@@ -14,3 +14,11 @@ Like in our previous research question, we visualised if there is a difference i
 <div id="fl_exp"></div>
 
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Again we see no significant difference before and after dusk for either of the groups. We modified our statistical test to incorporate the amount of experience of the officer. However, we did not find a statistically significant difference (p-value = 0.413). Hence, we cannot conclude that officers with less experience are more sexist.</p>
+
+<script> 
+
+      $(function(){
+        $("#fl").load("./include/fl.html");
+        $("#fl_exp").load("./include/fl_experience.html");
+      });
+      </script> 
