--- a/include/introduction.html
+++ b/include/introduction.html
@@ -18,8 +18,8 @@
 
 <ul>
     <li><b>Outcome analysis</b>: In this section, we try to answer the question of knowing whether women are more stopped by police than men on the basis of less evidence. To get meaningful results, we use the outcome analysis which uses the ratio of successful rates across gender and shows if there is a potential bias.</li>
-    <li><b>Method 2</b>: To be completed</li>
-    <li><b>Method 3</b>: To be completed</li>
+    <li><b>Veil of darkness</b>.</li>
+    <li><b>Years of experience</b>.</li>
 
 </ul>
 
