--- a/include/rq1.html
+++ b/include/rq1.html
@@ -18,7 +18,7 @@
 <br>
 <b>Data analysis:</b>
 
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>As you can see on the figure below, we have a total of 3,124,582 stops or 2,176,663 stops made on men and 947,919 on women.</p>
+<!-- <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>As you can see on the figure below, we have a total of 3,124,582 stops or 2,176,663 stops made on men and 947,919 on women.</p> -->
 <div id="rq1_1"></div>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>This distribution is not very significant given several factors that should be taken into account. Since we don&apos;t have enough information on the demography of the region, we pushed our analysis more in depth in another direction.</p>
