--- a/include/introduction.html
+++ b/include/introduction.html
@@ -2,7 +2,7 @@
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'><i>Pierson et al.</i> in their article presents an element that can be a barometer of social injustices towards minorities in modern society. The authors focus on the tendency of the police to stop people from minorities more often than others. By being difficult to prove, these injustices in our societies has the particularity of going unnoticed. The authors address this weakness by using data. Through their analyses, they show that the police, like our society, tend to inflict injustice on minorities solely based on their race.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
-<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Their tests are mainly based on the veil of darkness and the threshold test that will be presented later in this article.</p>
+<p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>Their tests are mainly based on the veil of darkness and the outcome test that will be presented later in this article.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>By reading this paper and by looking through the data used in the analysis, we could not help but draw a parallel with a part of the population that suffers as much injustice as minorities. These are women.</p>
 <p style='margin:0cm;font-size:16px;font-family:"Calibri",sans-serif;'>&nbsp;</p>
